# extism-browser

./: README.md  package-lock.json  package.json  vite.config.js
plugin/: Cargo.toml  README.md
plugin/.cargo/: config.toml
plugin/src/: lib.rs
src/routes/: +page.svelte
